k8s/9-ingress.yaml
# Ingress - Routes external traffic to services
# Exposes your app to the internet at http://NAMESPACE.chas.retro87.se

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: team-dashboard
  namespace: the-hole
  labels:
    app: team-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  # ingressClassName: nginx
  rules:
  # Your team's URL
  - host: the-hole.chas.retro87.se
    http:
      paths:
      # Frontend - serves the web UI
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 3000
